force-app/main/default/objects/Change_Request_Related_Savings__c/Change_Request_Related_Savings__c.object-meta.xml
<CustomObject>
    <label>Change Request Related Savings</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Request Related Savings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Request Related Savings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>