force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Annual_Recurring_Hard_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Hard_Savings__c</fullName>
    <formula>IF( ISPICKVAL(Frequency__c,&quot;One-Time&quot;), 0,
IF( ISPICKVAL(Frequency__c,&quot;Annual&quot;), Hard_Savings__c ,
IF( ISPICKVAL(Frequency__c,&quot;Biannual&quot;), Hard_Savings__c * 2 ,
IF( ISPICKVAL(Frequency__c,&quot;Quarterly&quot;), Hard_Savings__c * 4 ,
IF( ISPICKVAL(Frequency__c,&quot;Monthly&quot;), Hard_Savings__c * 12,
IF( ISPICKVAL(Frequency__c,&quot;Weekly&quot;), Hard_Savings__c * 52, 0))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring Hard Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>