force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Hard_Savings__c.field-meta.xml
<CustomField>
    <fullName>Hard_Savings__c</fullName>
    <label>Hard Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>