force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <formula>IF( ISPICKVAL( Employee_Level__c, &quot;Entry-Level&quot;), 55,
IF( ISPICKVAL( Employee_Level__c, &quot;Mid-Level&quot;), 90,
IF( ISPICKVAL( Employee_Level__c, &quot;Senior&quot;), 150,
IF( ISPICKVAL( Employee_Level__c, &quot;Executive&quot;), 350, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>