force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Hours_Saved__c.field-meta.xml
<CustomField>
    <fullName>Hours_Saved__c</fullName>
    <label>Hours Saved</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>