force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Labor_Savings__c.field-meta.xml
<CustomField>
    <fullName>Labor_Savings__c</fullName>
    <formula>Hourly_Cost__c * Number_of_Employees__c * Hours_Saved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>