force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>