force-app/main/default/objects/Change_Request_Related_Savings__c/fields/Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings__c</fullName>
    <formula>IF( AND(ISPICKVAL(Category__c, &quot;Direct Cost Savings&quot;),ISPICKVAL(Frequency__c, &quot;One-Time&quot;)), Hard_Savings__c,
IF( AND(ISPICKVAL(Category__c, &quot;Direct Cost Savings&quot;),NOT(ISPICKVAL(Frequency__c, &quot;One-Time&quot;))), Annual_Recurring_Hard_Savings__c,
IF( AND(ISPICKVAL(Category__c, &quot;Time Savings&quot;),ISPICKVAL(Frequency__c, &quot;One-Time&quot;)), Labor_Savings__c,
IF( AND(ISPICKVAL(Category__c, &quot;Time Savings&quot;),NOT(ISPICKVAL(Frequency__c, &quot;One-Time&quot;))), Annual_Recurring_Labor_Savings__c + Labor_Savings__c, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>