force-app/main/default/objects/Change_Request_Related_Savings__c/validationRules/No_One_Time_Time_Savings.validationRule-meta.xml
<ValidationRule>
    <fullName>No_One_Time_Time_Savings</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Frequency__c, &quot;One-Time&quot;), Hours_Saved__c &gt; 0)</errorConditionFormula>
    <errorMessage>Only recurring time savings can be captured in this analysis. Please update frequency field or discard this metric.</errorMessage>
</ValidationRule>